2012-01-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/QueryID.h: Encode neighbor_offset into query_id.
	* src/mcs/QueryID.cpp: Likewise.

	* testsuite/testID.cpp: Update testcase.

	* include/mcs/ForwardMessage.h: Add a comment.

	* testsuite/testBeliefState.cpp: Add testcase for removing duplication.

	* include/mcs/ReturnedBeliefState.h: New file.
	* src/mcs/ReturnedBeliefState.cpp: Likewise.
	* include/mcs/BackwardMessage.h: Likwise.
	* src/mcs/BackwardMessage.cpp: Likwise.

	* include/mcs/Printhelpers.h: Add printlist.

	* include/mcs/Makefile.am: Add ReturnedBeliefState.h, BackwardMessage.h.
	* src/mcs/Makefile.am: Add ReturnedBeliefState.cpp, BackwardMessage.cpp.

2011-12-29  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/Belief.h: Add ctx_id().

	* src/network/NewConcurrentMessageDispatcher.cpp: Move creation of mqs to ctor.

	* testsuite/testMessageDispatcher.cpp: New file.

	* testsuite/Makefile.am: add testMessageDispatcher.

	* src/mcs/Makefile.am: Add ForwardMessage.cpp.
	* incle/mcs/Makefile.am: Add NewMessage.h and ForwardMessage.h.

	* include/network/NewConcurrentMessageDispatcher.tcc: Return value.

	* include/network/ConcurrentMessageQueue.h: New typedef for 2-dimensional
	vector of ConcurrentMessageQueue.

	* include/mcs/ForwardMessage.h: New file.
	* src/mcs/ForwardMessage.cpp: Likewise.
	* include/mcs/NewMessage.h: Likewise.

	* include/network/NewConcurrentMessageDispatcher.h: ctor with k and np_neighbors.

2011-12-28  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/Makefile.am: Add NewConcurrentMessageDispatcher.h.
	* src/network/Makefile.am: Add NewConcurrentMessageDispatcher.cpp.

	* include/network/NewConcurrentMessageDispatcher.h: New file.
	* include/network/NewConcurrentMessageDispatcher.tcc: Likewise.
	* src/network/NewConcurrentMessageDispatcher.cpp: Likewise.

2011-12-27  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testBeliefState.cpp: Adapt testcase using BeliefStateOffset.
